# Autonomous-Car

./: Driver.cpp  LaneDetector.cpp  README.md  Trendlines.cpp
Arduino src/: Sketch.ino
ComponentController/: ComponentController.cpp  ComponentController.cpp~  ComponentController.h  ComponentController.h~
Overtaking/: Driver.cpp
Parking/: Driver.cpp
ProxyData/: CMakeLists.txt  MainModule.cpp  ProxyData.c  ProxyData.h  proxyArduino.cpp  proxyArduino.h
